--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ telegram/local.properties
 ### Java template
 # Compiled class file
 *.class
-
 # Log file
 *.log
 
@@ -88,3 +87,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/kotlin-telegram-bot.iml
