--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,19 @@
-apply plugin: 'kotlin'
-
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.kotlin_version = '1.2.40'
+    ext.klint_version = '3.3.0'
 
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+}
+
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.2.40"
+    id "org.jlleitschuh.gradle.ktlint" version "3.3.0"
 }
 
 allprojects {
@@ -17,6 +22,7 @@ allprojects {
 
     repositories {
         mavenCentral()
+        jcenter()
     }
 }
 
