--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.2.40'
     ext.klint_version = '3.3.0'
 
     repositories {
         mavenCentral()
     }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
 }
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.2.40"
-    id "org.jlleitschuh.gradle.ktlint" version "3.3.0"
+    id "org.jetbrains.kotlin.jvm" version "1.2.50"
+    id "org.jlleitschuh.gradle.ktlint" version "4.1.0"
 }
 
 allprojects {
@@ -31,5 +26,5 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
 }
