--- a/samples/dispatcher/build.gradle
+++ b/samples/dispatcher/build.gradle
@@ -5,7 +5,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
     compile project(":telegram")
 }
 
