Add sources to jitpack

--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     testCompile "org.mockito:mockito-core:2.15.0"
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
