Add sourcesJar to artifacts

--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -40,6 +40,8 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
 }
 
+artifacts { archives sourcesJar }
+
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
