--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
 
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.50"
-    id "org.jlleitschuh.gradle.ktlint" version "4.1.0"
 }
 
 allprojects {
+    apply from: "$rootDir/ktlint.gradle"
+
     group 'me.ivmg.kotlin-telegram-bot'
     version '0.3.4'
 
