Revamp and update 'sendPoll' operation, reorganize poll and keyboard related code, add new handler for poll answer updates, add support for the latest poll features offered by Telegram Bot API and add tests for 'sendPoll' API operation (#62)(#64)

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,8 @@
 rootProject.name = 'kotlin-telegram-bot'
 
-include ':telegram', ':echo', ':dispatcher', ':webhook'
+include ':telegram', ':echo', ':dispatcher', ':polls', ':webhook'
 
 project(':echo').projectDir = new File(rootDir, 'samples/echo')
 project(':dispatcher').projectDir = new File(rootDir, 'samples/dispatcher')
+project(':polls').projectDir = new File(rootDir, 'samples/polls')
 project(':webhook').projectDir = new File(rootDir, 'samples/webhook')
