--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter:$junit_version"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
-    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
+    testImplementation "io.mockk:mockk:1.10.2"
     testImplementation "com.squareup.okhttp3:mockwebserver:$mock_web_server_version"
 }
 
