--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -34,12 +34,13 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter:$junit_version"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
+    testImplementation "org.assertj:assertj-core:3.11.1"
     testImplementation "io.mockk:mockk:1.10.2"
     testImplementation "com.squareup.okhttp3:mockwebserver:$mock_web_server_version"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier.set("sources")
     from sourceSets.main.allSource
 }
 
