--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -1,6 +1,3 @@
-group 'com.github.kotlintelegrambot'
-version '1.0'
-
 buildscript {
     ext.retrofit_version = '2.3.0'
     ext.junit_version = "5.5.1"
@@ -13,7 +10,14 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlinx.binary-compatibility-validator' version '0.4.0'
+}
+
 apply plugin: 'kotlin'
+
+group 'com.github.kotlintelegrambot'
+version '1.0'
 
 repositories {
     mavenCentral()
