fix all current Gradle deprecation warnings:
- remove deprecated jcenter() repository/replace it with mavenCentral()
- replace compile -> implementation/remove explicit dependency on kotlin-stdlib (Kotlin plugin provides it by default)

--- a/samples/dispatcher/build.gradle
+++ b/samples/dispatcher/build.gradle
@@ -5,8 +5,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib"
-    compile project(":telegram")
+    implementation project(":telegram")
 }
 
 jar {
@@ -14,6 +13,5 @@ jar {
         attributes 'Main-Class': 'com.github.kotlintelegrambot.MainKt'
     }
 
-
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
