--- a/samples/webhook/build.gradle
+++ b/samples/webhook/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'kotlin'
 
 repositories {
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib"
-    compile "io.ktor:ktor-server-netty:1.2.6"
-    compile project(":telegram")
+    implementation "io.ktor:ktor-server-netty:1.2.6"
+    implementation project(":telegram")
 }
 
 task runApp(type: JavaExec) {
@@ -22,5 +21,5 @@ jar {
     }
 
 
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
