fix all current Gradle deprecation warnings:
-replace main -> mainClass in JavaExec tasks

--- a/samples/webhook/build.gradle
+++ b/samples/webhook/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 
 task runApp(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'com.github.kotlintelegrambot.webhook.MainKt'
+    mainClass.set('com.github.kotlintelegrambot.webhook.MainKt')
 }
 
 jar {
