restore duplicatesStrategy behavior for Jar tasks from Gradle 6.x(INCLUDE)

--- a/samples/dispatcher/build.gradle
+++ b/samples/dispatcher/build.gradle
@@ -14,4 +14,6 @@ jar {
     }
 
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
