--- a/samples/echo/build.gradle
+++ b/samples/echo/build.gradle
@@ -14,4 +14,6 @@ jar {
     }
 
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
