--- a/samples/polls/build.gradle
+++ b/samples/polls/build.gradle
@@ -15,4 +15,6 @@ jar {
 
 
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
