--- a/samples/webhook/build.gradle
+++ b/samples/webhook/build.gradle
@@ -22,4 +22,6 @@ jar {
 
 
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
