Update Gradle to 7.2 (#224)
* fix all current Gradle deprecation warnings:

- remove deprecated jcenter() repository/replace it with mavenCentral()
- replace compile -> implementation/remove explicit dependency on kotlin-stdlib (Kotlin plugin provides it by default)

* remove dependency on Gradle 3.5-rc-2

* update Gradle to 7.2

* restore duplicatesStrategy behavior for Jar tasks from Gradle 6.x(INCLUDE)

* fix all current Gradle deprecation warnings:

-replace main -> mainClass in JavaExec tasks

* update Ktor dependency to 1.6.3

--- a/ktlint.gradle
+++ b/ktlint.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 configurations {
@@ -15,7 +15,7 @@ dependencies {
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass.set("com.pinterest.ktlint.Main")
     args "src/**/*.kt"
 }
 check.dependsOn ktlint
@@ -23,6 +23,6 @@ check.dependsOn ktlint
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "src/**/*.kt"
 }
