--- a/samples/polls/build.gradle
+++ b/samples/polls/build.gradle
@@ -5,7 +5,7 @@ repositories {
 }
 
 dependencies {
-    compile project(":telegram")
+    implementation project(":telegram")
 }
 
 jar {
@@ -14,5 +14,7 @@ jar {
     }
 
 
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
