--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 
 plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.5.31"
     id 'org.jetbrains.kotlinx.binary-compatibility-validator' version '0.7.1'
 }
 
