--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -23,6 +23,11 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = "1.17"
+    targetCompatibility = "1.17"
+}
+
 dependencies {
     // Networking
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -54,11 +59,11 @@ sourceSets {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "17"
 }
 
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "17"
 }
 
 test {
