--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up Java 8
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: 8
 
       - name: Build with Gradle
         run: ./gradlew build
@@ -33,8 +34,7 @@ jobs:
           TEST_RESULTS_PATH: telegram/build/reports/tests/test/index.html
       - name: Attach the report
         if: always()
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: Tests report
           path: ${{ steps.xunit-viewer.outputs.report-dir }}
-
