--- a/samples/webhook/build.gradle
+++ b/samples/webhook/build.gradle
@@ -8,6 +8,7 @@ repositories {
 dependencies {
     implementation 'io.ktor:ktor-server-netty:1.6.3'
     implementation project(":telegram")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 task runApp(type: JavaExec) {
@@ -24,4 +25,16 @@ jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+buildscript {
+    ext.kotlin_version = '1.8.21'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+kotlin {
+    jvmToolchain(11)
 }
