--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.kotlin_version = '1.8.21'
     ext.retrofit_version = '2.9.0'
     ext.junit_version = "5.5.1"
     ext.logging_interceptor_version = '3.8.0'
@@ -6,6 +7,9 @@ buildscript {
 
     repositories {
         mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -36,6 +40,7 @@ dependencies {
     testImplementation "org.assertj:assertj-core:3.11.1"
     testImplementation "io.mockk:mockk:1.10.2"
     testImplementation "com.squareup.okhttp3:mockwebserver:$mock_web_server_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -59,4 +64,7 @@ compileTestKotlin {
 
 test {
     useJUnitPlatform()
+}
+kotlin {
+    jvmToolchain(11)
 }
