--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -1,20 +1,13 @@
 buildscript {
-    ext.retrofit_version = '2.9.0'
-    ext.junit_version = "5.5.1"
-    ext.logging_interceptor_version = '3.8.0'
-    ext.mock_web_server_version = '4.2.1'
-    ext.coroutines_version = '1.6.2'
-
     repositories {
         mavenCentral()
     }
 }
 
 plugins {
-    id 'org.jetbrains.kotlinx.binary-compatibility-validator' version '0.13.2'
+    alias libs.plugins.kotlinx.binaryCompatibilityValidator
+    alias libs.plugins.kotlin.jvm
 }
-
-apply plugin: 'kotlin'
 
 group 'com.github.kotlintelegrambot'
 version '6.0.7'
@@ -25,21 +18,18 @@ repositories {
 
 dependencies {
     // Networking
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation libs.bundles.retrofit
 
-    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
+    implementation libs.okhttp3.logging.interceptor
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation libs.kotlinx.coroutines.core
 
     // Testing
-    testImplementation "org.junit.jupiter:junit-jupiter:$junit_version"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
-    testImplementation "org.assertj:assertj-core:3.11.1"
-    testImplementation "io.mockk:mockk:1.10.2"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$mock_web_server_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    testImplementation libs.bundles.junit
+    testImplementation libs.assertj.core
+    testImplementation libs.mockk
+    testImplementation libs.okhttp3.mockwebserver
+    testImplementation libs.kotlinx.coroutines.test
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
