--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Java 8
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 8
 
       - name: Build with Gradle
@@ -34,7 +34,7 @@ jobs:
           TEST_RESULTS_PATH: telegram/build/reports/tests/test/index.html
       - name: Attach the report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Tests report
           path: ${{ steps.xunit-viewer.outputs.report-dir }}
